# fe-php

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  LIBPHP_INTEGRATION.md  LICENSE  MACOS_TROUBLESHOOTING.md  PERFORMANCE.md  PR_SUMMARY.md  QUICK_START.sh  README.md  config.toml  package-lock.json  test_config.toml
benchmark/: apache-bench.conf  config-admin-test.toml  config-embedded.toml  config-fastcgi-only.toml  config-fastcgi.toml  config-hybrid.toml  nginx-bench.conf  nginx-fpm.conf  results_20251114_134328.txt  run_comprehensive_bench.sh  test_all_modes.sh
docs/: ADMIN_GUIDE.md  ARCHITECTURE.md  FEATURES.md  HYBRID_BACKEND.md  USAGE.md  api-reference.md  backends.md  configuration.md  deployment.md  getting-started.md  monitoring.md  security.md
examples/: advanced_config.toml  config.toml  hybrid_backend_config.toml  sample_config.toml  test_admin.sh  test_features.sh  test_output.rs  test_single_worker_config.toml  unix_socket_config.toml  waf_rules.toml
examples/php/: bench.php  index.php  phpinfo.php  test_opcache.php
src/: lib.rs  main.rs
src/admin/: api.rs  mod.rs  server.rs  unix_socket.rs
src/backend/: embedded.rs  fastcgi.rs  mod.rs  router.rs  static_files.rs
src/cli/: bench.rs  compare.rs  config.rs  mod.rs  monitor.rs  sandbox.rs  serve.rs  waf.rs
src/config/: advanced.rs  backend.rs  defaults.rs  logging.rs  mod.rs  parser.rs  php.rs  security.rs  server.rs  types.rs  validator.rs
src/deployment/: ab_test.rs  canary.rs  mod.rs  traffic_splitter.rs
src/geoip/: mod.rs
src/load_balancing/: mod.rs
src/logging/: mod.rs  structured.rs
src/metrics/: collector.rs  exporter.rs  mod.rs
src/monitor/: analyzer.rs  collector.rs  mod.rs
src/php/: connection_pool.rs  executor.rs  fastcgi.rs  ffi.rs  mod.rs  worker.rs
src/redis/: mod.rs
src/redis_session/: mod.rs
src/server/: compression.rs  config_reload.rs  cors.rs  http_redirect.rs  ip_blocker.rs  ip_filter.rs  middleware.rs  mod.rs  multiprocess.rs  peer_addr.rs  range.rs  router.rs  shutdown.rs
src/session/: mod.rs
src/tls/: mod.rs
src/tracing_telemetry/: mod.rs
src/tui/: app.rs  client.rs  mod.rs
src/tui/tabs/: analysis.rs  backends.rs  help.rs  logs.rs  metrics.rs  mod.rs  overview.rs  security.rs
src/upstream/: balancer.rs  circuit_breaker.rs  mod.rs
src/utils/: http.rs  mod.rs  signals.rs
src/waf/: engine.rs  geoip.rs  mod.rs  rules.rs
templates/: admin_backends.html  admin_logs.html  admin_metrics.html  admin_system.html  admin_waf.html
