[package]
name = "fe-php"
version = "0.1.0"
edition = "2021"
authors = ["fe-php contributors"]
description = "All-in-one PHP application platform built with Rust"
license = "MIT"
repository = "https://github.com/nzsys/fe-php"

[[bin]]
name = "fe-php"
path = "src/main.rs"

[lib]
name = "fe_php"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Configuration and serialization
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# WAF
regex = "1.10"
maxminddb = "0.24"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID for request IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# System utilities
num_cpus = "1.16"
libc = "0.2"
libloading = "0.8"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Async channels
async-channel = "2.1"

# File system operations
walkdir = "2.4"

# Rate limiting
governor = "0.6"

# HTTP client for benchmarking
reqwest = { version = "0.11", features = ["json"] }

# Statistics for benchmarking
hdrhistogram = "7.5"

# Lazy static
lazy_static = "1.4"

# Futures
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
